--- a/views/devices.html
+++ b/views/devices.html
@@ -15,6 +15,11 @@
                 class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
                 deveui
               </th>
+              <th
+                scope="col"
+                class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                Source
+              </th>
             </tr>
           </thead>
           <tbody class="mono">
@@ -25,14 +30,28 @@
             <tr class="bg-white border-b text-gray-900">
               {{ end }}
               <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-                <a
-                  href="https://education.thingsflow.eu/IAQ/DeviceByQR?hashedname={{.Hashedname}}"
-                  target="_blank"
-                  >{{ .Name }}</a
-                >
+                <a href="devices/{{.Deveui}}"> {{ .Name }}</a>
               </td>
               <td class="text-sm font-light px-6 py-4 whitespace-nowrap">
                 {{ .Deveui }}
+              </td>
+              <td class="text-sm font-light px-6 py-4 whitespace-nowrap">
+                <a
+                  href="https://education.thingsflow.eu/IAQ/DeviceByQR?hashedname={{.Hashedname}}"
+                  target="_blank">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6">
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
+                  </svg>
+                </a>
               </td>
             </tr>
             {{ end }}
