--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -34,7 +34,9 @@
             >
           </li>
           <li>
-            <a class="hover:text-cyan-500 transition-colors" href="">Link 3</a>
+            <a class="hover:text-cyan-500 transition-colors" href="/scrape"
+              >Scrape</a
+            >
           </li>
           <li>
             <a class="hover:text-cyan-500 transition-colors" href="">Link 4</a>
