add most recent scrape date to device views

--- a/views/device.html
+++ b/views/device.html
@@ -3,6 +3,7 @@
   <h2>{{ .Device.Deveui }}</h2>
   <h2>{{ .Device.Hashedname }}</h2>
 </header>
+{{ .Device.Temp }} {{ .Device.Co2 }} {{ .Device.Humidity }}
 <br />
 <label for="time-range">Select a Time Range:</label>
 <select name="range" id="time-range">
