--- a/views/devices.html
+++ b/views/devices.html
@@ -18,6 +18,21 @@
               <th
                 scope="col"
                 class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                Temperature
+              </th>
+              <th
+                scope="col"
+                class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                Co2
+              </th>
+              <th
+                scope="col"
+                class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+                Humidity
+              </th>
+              <th
+                scope="col"
+                class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
                 Source
               </th>
             </tr>
@@ -34,6 +49,15 @@
               </td>
               <td class="text-sm font-light px-6 py-4 whitespace-nowrap">
                 {{ .Deveui }}
+              </td>
+              <td class="text-sm font-light px-6 py-4 whitespace-nowrap">
+                {{ .Temp }}
+              </td>
+              <td class="text-sm font-light px-6 py-4 whitespace-nowrap">
+                {{ .Co2 }}
+              </td>
+              <td class="text-sm font-light px-6 py-4 whitespace-nowrap">
+                {{ .Humidity }}
               </td>
               <td class="text-sm font-light px-6 py-4 whitespace-nowrap">
                 <a
