--- a/views/devices.html
+++ b/views/devices.html
@@ -2,7 +2,7 @@
   <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
     <div class="py-2 inline-block sm:px-6 lg:px-8">
       <div class="overflow-hidden">
-        <table class="min-w-full">
+        <table class="min-w-full" data-sortable>
           <thead class="bg-white border-b">
             <tr>
               <th
