--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -11,6 +11,7 @@
       src="https://cdn.plot.ly/plotly-2.26.0.min.js"
       charset="utf-8"></script>
     <link rel="stylesheet" href="/css/main.css" />
+    <script src="/js/sortable.min.js"></script>
   </head>
 
   <body>
