small layout fix

--- a/views/device.html
+++ b/views/device.html
@@ -95,11 +95,11 @@
     <option value="90">90 days</option>
   </select>
 
-  <div class="text-sm font-medium text-center border-b border-gray-200">
+  <div class="text-base font-medium text-center border-b border-gray-200">
     <ul class="flex flex-wrap -mb-px">
       <li class="mr-2">
         <button
-          class="tab-button inline-block p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-800 hover:border-cyan-500"
+          class="tab-button inline-block p-2 border-b-2 border-transparent rounded-t-lg hover:text-gray-800 hover:border-cyan-500"
           id="init-tab"
           onclick="openTab(event, 'temp')">
           Temperature
@@ -107,14 +107,14 @@
       </li>
       <li class="mr-2">
         <button
-          class="tab-button inline-block p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-800 hover:border-cyan-500"
+          class="tab-button inline-block p-2 border-b-2 border-transparent rounded-t-lg hover:text-gray-800 hover:border-cyan-500"
           onclick="openTab(event, 'co2')">
           Co2
         </button>
       </li>
       <li class="mr-2">
         <button
-          class="tab-button inline-block p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-800 hover:border-cyan-500"
+          class="tab-button inline-block p-2 border-b-2 border-transparent rounded-t-lg hover:text-gray-800 hover:border-cyan-500"
           onclick="openTab(event, 'humidity')">
           Humidity
         </button>
