--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Corap</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/htmx.org@1.9.5"></script>
     <link
