--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -18,7 +18,7 @@
 
   <body>
     <div class="shadow bg-white">
-      <div class="h-16 mx-auto px-5 flex items-center justify-between">
+      <div class="h-16 mx-auto px-5 flex items-center gap-x-6">
         <a
           class="text-2xl hover:text-cyan-500 transition-colors cursor-pointer"
           href="/"
@@ -40,12 +40,6 @@
             <a class="hover:text-cyan-500 transition-colors" href="/scrape"
               >Scrape</a
             >
-          </li>
-          <li>
-            <a class="hover:text-cyan-500 transition-colors" href="">Link 4</a>
-          </li>
-          <li>
-            <a class="hover:text-cyan-500 transition-colors" href="">Link 5</a>
           </li>
         </ul>
       </div>
