--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -4,7 +4,6 @@
     <title>Corap</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/htmx.org@1.9.5"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Source+Sans+3&display=swap"
@@ -13,6 +12,7 @@
       src="https://cdn.plot.ly/plotly-2.26.0.min.js"
       charset="utf-8"></script>
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/tlw.css" />
     <script src="/js/sortable.min.js"></script>
   </head>
 
