Devices lazy loading skeleton

--- a/components/devices.templ
+++ b/components/devices.templ
@@ -3,5 +3,8 @@ package components
 templ Devices() {
 	@Main() {
 		<div hx-get="/devices/table" hx-trigger="load"></div>
+		@Table() {
+			@SkeletonRow()
+		}
 	}
 }
