--- a/components/devices.templ
+++ b/components/devices.templ
@@ -2,9 +2,10 @@ package components
 
 templ Devices() {
 	@Main() {
-		<div hx-get="/devices/table" hx-trigger="load"></div>
-		@Table() {
-			@SkeletonRow()
-		}
+		<div hx-get="/devices/table" hx-trigger="load">
+			@Table() {
+				@SkeletonRow()
+			}
+		</div>
 	}
 }
