--- a/components/main.templ
+++ b/components/main.templ
@@ -36,6 +36,9 @@ templ Main() {
 						<li>
 							<a class="hover:text-cyan-500 transition-colors" href="/scrape">Scrape</a>
 						</li>
+						<li>
+							<a class="hover:text-cyan-500 transition-colors" href="/trophies">Trophies</a>
+						</li>
 					</ul>
 				</div>
 			</div>
