--- a/components/main.templ
+++ b/components/main.templ
@@ -37,7 +37,7 @@ templ Main() {
 							<a class="hover:text-cyan-500 transition-colors" href="/scrape">Scrape</a>
 						</li>
 						<li>
-							<a class="hover:text-cyan-500 transition-colors" href="/trophies">Trophies</a>
+							<a class="hover:text-cyan-500 transition-colors" href="/trophies">Trophies(WIP)</a>
 						</li>
 					</ul>
 				</div>
